domain/src/main/java/com/example/domain/task/error/ReverseGeocodeLocationError.kt
package com.example.domain.task.error

sealed class ReverseGeocodeLocationError {
    object GeocodingFailed : ReverseGeocodeLocationError()
    class Exception(val throwable: Throwable) : ReverseGeocodeLocationError()
}